# fastapi-booking

backend/: .gitignore  pyproject.toml  requirements.txt
backend/alembic/versions/: 2025_01_06_1655-c3565f3251c0_.py  2025_01_06_1703-a8cd983e5614_.py  2025_01_07_1108-877e4db3c69e_.py  2025_01_07_1116-eca938e34614_.py  2025_01_16_1407-ece6eed947b6_.py  2025_01_18_1455-17819bd8311a_.py  2025_01_18_1458-6114cab382aa_.py
backend/src/application/dtos/: chats.py  offers.py  users.py
backend/src/application/interfaces/repositories/: chats.py
backend/src/application/usecases/: chats.py  offers.py  users.py
backend/src/application/utils/: chats.py  common.py  users.py
backend/src/infrastructure/models/: chats.py  offers.py  users.py
backend/src/infrastructure/repositories/: base.py  chats.py
backend/src/presentation/api/: exceptions.py  main.py  paginator.py  rate_limiter.py
backend/src/presentation/api/dependencies/: users.py
backend/src/presentation/api/routers/: auth.py  chats.py  companies.py  offers.py  users.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AuthForm.jsx  Company.jsx  LoginForm.jsx  Navigation.jsx  OfferDetail.jsx  OfferPreview.jsx  ProtectedRoute.jsx  RegisterForm.jsx  User.jsx
frontend/src/hooks/: AuthProvider.jsx  useCurrentUser.jsx
frontend/src/pages/: Chat.jsx  CreateOffer.jsx  GoogleAuth.jsx  Home.jsx  Login.jsx  NotFound.jsx  Offer.jsx  PasswordChange.jsx  PasswordReset.jsx  Profile.jsx  Register.jsx  Settings.jsx
frontend/src/utils/: api.js  localstorage.js
